2010-01-12  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        position:fixed and transform on same element breaks fixed behavior
        https://bugs.webkit.org/show_bug.cgi?id=31283

        Fix interactions of transforms and fixed positioning, namely that fixed position
        elements with a transformed ancestor are positioned relative to that ancestor,
        and an element with both a transform and fixed position respects that positioning.

        Test: transforms/2d/transform-fixed-container.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::mapLocalToContainer):
        (WebCore::RenderBox::mapAbsoluteToLocalPoint):
        Transforms should not unconditionally stop the propagation of the 'fixed' flag to ancestors,
        but only if the transformed element is not itself fixed.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::convertToLayerCoords):
        Fix this method to behave correctly for fixed position layers whose container is not
        the root, but some other (probably transformed) ancestor. In that case, we can fall into
        the "position: absolute" code path.

Canonical link: https://commits.webkit.org/44581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53173 268f45cc-cd09-0410-ab3c-d52691b4dbfc